4.1
 * repair prepare message would produce a wrong error message if network timeout happened rather than reply wait timeout (CASSANDRA-16992)
 * Log queries that fail on timeout or unavailable errors up to once per minute by default (CASSANDRA-17159)
 * Refactor normal/preview/IR repair to standardize repair cleanup and error handling of failed RepairJobs (CASSANDRA-17069)
 * Log missing peers in StartupClusterConnectivityChecker (CASSANDRA-17130)
 * Introduce separate rate limiting settings for entire SSTable streaming (CASSANDRA-17065)
 * Implement Virtual Tables for Auth Caches (CASSANDRA-16914)
 * Actively update auth cache in the background (CASSANDRA-16957)
 * Add unix time conversion functions (CASSANDRA-17029)
 * JVMStabilityInspector.forceHeapSpaceOomMaybe should handle all non-heap OOMs rather than only supporting direct only (CASSANDRA-17128)
 * Forbid other Future implementations with checkstyle (CASSANDRA-17055)
 * commit log was switched from non-daemon to daemon threads, which causes the JVM to exit in some case as no non-daemon threads are active (CASSANDRA-17085)
 * Add a Denylist to block reads and writes on specific partition keys (CASSANDRA-12106)
 * v4+ protocol did not clean up client warnings, which caused leaking the state (CASSANDRA-17054)
 * Remove duplicate toCQLString in ReadCommand (CASSANDRA-17023)
 * Ensure hint window is persistent across restarts of a node (CASSANDRA-14309)
 * Allow to GRANT or REVOKE multiple permissions in a single statement (CASSANDRA-17030)
 * Allow to grant permission for all tables in a keyspace (CASSANDRA-17027)
 * Log time spent writing keys during compaction (CASSANDRA-17037)
 * Make nodetool compactionstats and sstable_tasks consistent (CASSANDRA-16976)
 * Add metrics and logging around index summary redistribution (CASSANDRA-17036)
 * Add configuration options for minimum allowable replication factor and default replication factor (CASSANDRA-14557)